fix(CDLP-44): fix orthophoniste and jeux component from version mobile

--- a/src/app/components/orthophoniste/orthophoniste.component.css
+++ b/src/app/components/orthophoniste/orthophoniste.component.css
@@ -1,3 +1,24 @@
+/* Version Mobile */
+
+.container-maintenance-mobile {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-maintenance-mobile img {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 /* Version PC */
 
 .container-maintenance {
